# bullet-bored

./: Cargo.toml
content/builtin/bullets/: basic.bullet.rhai
content/builtin/shader/: board_frg.glsl  board_vtx.glsl  player_vtx.glsl
src/: game.rs  main.rs  math.rs  render.rs  scripting.rs  util.rs
src/game/: board.rs  bullet.rs  player.rs  wave.rs  world.rs
src/game/bullet/: instance.rs
src/render/: base.rs  pipeline.rs
src/scripting/: error.rs  util.rs  validation.rs  vec_interop.rs
src/util/: crash_and_burn.rs
test/: main.rs
