[package]
name = "bullet-bored"
version = "0.1.0"
edition = "2021"

default-run = "bullet-bored"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.25"
miniquad = "0.3.14"
native-dialog = "0.6.3"
rhai = { version = "1.12.0", features = ["f32_float"] }


[[bin]]
name = "testbed"
path = "test/main.rs"